# Penrose

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
benchmarking/: Orbital_plot.ipynb  freefall.h  main_benchmark.cpp
notes/: NOTES.md
shaders/: quad.frag
src/: Constants.h  main.cpp
src/benchmarking/: Freefall_plot.ipynb  freefall.cpp  orbital.cpp  orbital.h
src/physics_engine/: physics.cpp  physics.h
src/render/: Camera.h  Renderer.cpp  Renderer.h  Shader.h  Texture.cpp  Window.cpp  Window.h
